almost done with projects
i set up a actual website. i am also almost done with with my projects tab

--- a/inbox.html
+++ b/inbox.html
@@ -48,7 +48,7 @@
             <li><a class="dropdown-item" href="./silver.html">Silver</a></li>
             <li><a class="dropdown-item" href="./writer.html">Writer</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="./nav.html">Test</a></li>
           </ul>
         </li>
         <li class="nav-item">
