--- a/nav.html
+++ b/nav.html
@@ -44,11 +44,14 @@
             Profiles
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="./entity.html">Entity</a></li>
-            <li><a class="dropdown-item" href="./silver.html">Silver</a></li>
-            <li><a class="dropdown-item" href="./writer.html">Writer</a></li>
+            <li><a class="dropdown-item" href="./entity.html">The Entity</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="./silver.html">Silver Knight</a></li>
+            <li><a class="dropdown-item" href="./writer.html">The Writer</a></li>
+            <li><a class="dropdown-item" href="./writer.html">Black</a></li>
+            <li><a class="dropdown-item" href="./writer.html">Blue</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="./nav.html">test</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -66,3 +69,6 @@
       </form>
 
     </div>
+  </div>
+</nav>
+        </div>
