--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entity OS</title>
 
-    <link rel="shortcut icon" type="image/png" href="/assets/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="./assets/favicon.png">
     
     <script defer src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
@@ -17,14 +17,16 @@
 
 </head>
 
+
+
+
 <body>
 
     <div class="container ">
-
         <div class="row">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <img src="/assets/favicon.png" alt="Bootstrap" width="30" height="24">
+    <img src="./assets/favicon.png" alt="Bootstrap" width="30" height="24">
     <a class="navbar-brand">Entity OS</a>
 
 
@@ -32,18 +34,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/project.html">Projects</a>
+          <a class="nav-link" href="./project.html">Projects</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Profiles
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="./entity.html">Entity</a></li>
+            <li><a class="dropdown-item" href="./silver.html">Silver</a></li>
+            <li><a class="dropdown-item" href="./writer.html">Writer</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
@@ -51,15 +54,208 @@
         <li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true">Disabled</a>
         </li>
+
+</button>
       </ul>
+        <button type="button" class="btn btn-primary position-relative">
+  Inbox
+  <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+    1
+    <span class="visually-hidden">unread messages</span>
+  </span>
+      </form>
 
     </div>
   </div>
-</nav>  
+</nav>
+        </div>  
+
+        <div class="row">
+          <div class="space"></div>
         </div>
 
-        </div>
+        <div class="row">
+          <div class="col-4">
+<div class="accordion" id="accordionPanelsStayOpenExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+        Project: Recruit
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse">
+      <div class="accordion-body">
+        I have no one to help me. No friends no allies not even team members. So with this project i will try to get more team members my goal is 3 main team members and a bunch of smaller members to work for me. 
+      </div>
     </div>
+  </div>
+          </div>
+
+
+        </div>
+
+        <div class="col-7" class="MoveDown">
+          <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 50px">
+  <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 100%">Progress: 100%</div>
+</div>
+        </div>
+        </div>
+
+        <div class="row">
+          <div class="space"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-4">
+<div class="accordion" id="accordionPanelsStayOpenExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true" aria-controls="panelsStayOpen-collapseTwo">
+        Project: Rebirth
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+      <div class="accordion-body">
+        With this #### having come to me i will begin to ###### his ###### to build the perfect #### for me.
+      </div>
+    </div>
+  </div>
+          </div>
+
+
+        </div>
+
+        <div class="col-7" class="MoveDown">
+          <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 50px">
+  <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 100%">Progress: 100%</div>
+</div>
+        </div>
+        </div>
+
+                <div class="row">
+          <div class="space"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-4">
+<div class="accordion" id="accordionPanelsStayOpenExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="true" aria-controls="panelsStayOpen-collapseThree">
+        Project: Rebuild
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+      <div class="accordion-body">
+        After i got kicked out of ###### I need a new base so i am going to make a base between universes. Now that i have people helping me this will be alot easier.
+      </div>
+    </div>
+  </div>
+          </div>
+
+
+        </div>
+
+        <div class="col-7" class="MoveDown">
+          <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 50px">
+  <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width:74%">Progress: CANCELED</div>
+</div>
+        </div>
+        </div>
+
+        <div class="row">
+          <div class="space"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-4">
+<div class="accordion" id="accordionPanelsStayOpenExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="true" aria-controls="panelsStayOpen-collapseFour">
+        Project: Vessel
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
+      <div class="accordion-body">
+        
+      </div>
+    </div>
+  </div>
+          </div>
+
+
+        </div>
+
+        <div class="col-7" class="MoveDown">
+          <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 50px">
+  <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 37%">Progress: 37%</div>
+</div>
+        </div>
+        </div>
+
+        <div class="row">
+          <div class="space"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-4">
+<div class="accordion" id="accordionPanelsStayOpenExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="true" aria-controls="panelsStayOpen-collapseFive">
+        Project: Rebuild 2
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse">
+      <div class="accordion-body">
+        My old base got destroyed so time to make a new one. I have found a suitable place on a distant planet wher eno one goes to. Its the perfect place no one will ever find it.
+      </div>
+    </div>
+  </div>
+          </div>
+
+
+        </div>
+
+        <div class="col-7" class="MoveDown">
+          <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 50px">
+  <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 90%">Progress: CANCELED</div>
+</div>
+        </div>
+        </div>
+
+                <div class="row">
+          <div class="space"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-4">
+<div class="accordion" id="accordionPanelsStayOpenExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="true" aria-controls="panelsStayOpen-collapseSix">
+        Project: Rebuild 3
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse">
+      <div class="accordion-body">
+        So the base got found and once again destroyed but that will not stop me form making a new one. So i have found another planet to build a base on. As of writing this we are already around 70% done.
+      </div>
+    </div>
+  </div>
+          </div>
+
+
+        </div>
+
+        <div class="col-7" class="MoveDown">
+          <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 50px">
+  <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 92%">Progress: 92%</div>
+</div>
+        </div>
+        </div>
+
 
 </body>
 </html>
