--- a/nav.html
+++ b/nav.html
@@ -24,6 +24,7 @@
 
     <div class="container ">
         <div class="row">
+          <!-- Navbar starts here -->
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <img src="./assets/favicon.png" alt="Bootstrap" width="30" height="24">
@@ -38,6 +39,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./project.html">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./######.html">######</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./login.html">Login</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -54,21 +61,8 @@
             <li><a class="dropdown-item" href="./nav.html">test</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-
-</button>
-      </ul>
-        <button type="button" class="btn btn-primary position-relative">
-  Inbox
-  <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-    1
-    <span class="visually-hidden">unread messages</span>
-  </span>
-      </form>
-
     </div>
   </div>
 </nav>
         </div>
+<!-- Navbar ends here -->
