--- a/project.html
+++ b/project.html
@@ -79,7 +79,7 @@
 <div class="accordion" id="accordionPanelsStayOpenExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
         Project: Recruit
       </button>
     </h2>
@@ -94,7 +94,7 @@
 
         </div>
 
-        <div class="col-7" class="MoveDown">
+        <div class="col-8" class="MoveDown">
           <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 50px">
   <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 100%">Progress: 100%</div>
 </div>
@@ -110,7 +110,7 @@
 <div class="accordion" id="accordionPanelsStayOpenExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true" aria-controls="panelsStayOpen-collapseTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true" aria-controls="panelsStayOpen-collapseTwo">
         Project: Rebirth
       </button>
     </h2>
@@ -125,7 +125,7 @@
 
         </div>
 
-        <div class="col-7" class="MoveDown">
+        <div class="col-8" class="MoveDown">
           <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 50px">
   <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 100%">Progress: 100%</div>
 </div>
@@ -141,7 +141,7 @@
 <div class="accordion" id="accordionPanelsStayOpenExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="true" aria-controls="panelsStayOpen-collapseThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="true" aria-controls="panelsStayOpen-collapseThree">
         Project: Rebuild
       </button>
     </h2>
@@ -156,7 +156,7 @@
 
         </div>
 
-        <div class="col-7" class="MoveDown">
+        <div class="col-8" class="MoveDown">
           <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 50px">
   <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width:74%">Progress: CANCELED</div>
 </div>
@@ -172,13 +172,13 @@
 <div class="accordion" id="accordionPanelsStayOpenExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="true" aria-controls="panelsStayOpen-collapseFour">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="true" aria-controls="panelsStayOpen-collapseFour">
         Project: Vessel
       </button>
     </h2>
     <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
       <div class="accordion-body">
-        
+        [Log in to see this content]
       </div>
     </div>
   </div>
@@ -187,7 +187,7 @@
 
         </div>
 
-        <div class="col-7" class="MoveDown">
+        <div class="col-8" class="MoveDown">
           <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 50px">
   <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 37%">Progress: 37%</div>
 </div>
@@ -203,7 +203,7 @@
 <div class="accordion" id="accordionPanelsStayOpenExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="true" aria-controls="panelsStayOpen-collapseFive">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="true" aria-controls="panelsStayOpen-collapseFive">
         Project: Rebuild 2
       </button>
     </h2>
@@ -218,7 +218,7 @@
 
         </div>
 
-        <div class="col-7" class="MoveDown">
+        <div class="col-8" class="MoveDown">
           <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 50px">
   <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 90%">Progress: CANCELED</div>
 </div>
@@ -234,7 +234,7 @@
 <div class="accordion" id="accordionPanelsStayOpenExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="true" aria-controls="panelsStayOpen-collapseSix">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="true" aria-controls="panelsStayOpen-collapseSix">
         Project: Rebuild 3
       </button>
     </h2>
@@ -249,7 +249,7 @@
 
         </div>
 
-        <div class="col-7" class="MoveDown">
+        <div class="col-8" class="MoveDown">
           <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="height: 50px">
   <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" style="width: 92%">Progress: 92%</div>
 </div>
