--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
 
     <div class="container ">
         <div class="row">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+<!-- navbar begins here -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <img src="./assets/favicon.png" alt="Bootstrap" width="30" height="24">
     <a class="navbar-brand">Entity OS</a>
-
-
-    </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -39,36 +37,37 @@
         <li class="nav-item">
           <a class="nav-link" href="./project.html">Projects</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./info.html">Info</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./login.html">Login</a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Profiles
           </a>
+          
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="./entity.html">Entity</a></li>
-            <li><a class="dropdown-item" href="./silver.html">Silver</a></li>
-            <li><a class="dropdown-item" href="./writer.html">Writer</a></li>
+            <li><a class="dropdown-item" href="./acces.html">The Entity</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="./nav.html">Something else here</a></li>
+            <li><a class="dropdown-item" href="./error.html">Silver Knight</a></li>
+            <li><a class="dropdown-item" href="./error.html">The Writer</a></li>
+            <li><a class="dropdown-item" href="./error.html">Black</a></li>
+            <li><a class="dropdown-item" href="./error.html">Blue</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-
-</button>
       </ul>
-        <button type="button" class="btn btn-primary position-relative">
-  Inbox
-  <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-    1
-    <span class="visually-hidden">unread messages</span>
-  </span>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+        <button class="btn btn-outline-primary" type="submit">Search</button>
       </form>
-
     </div>
   </div>
 </nav>
-        </div>
+</div>
+<!-- navbar ends here -->
+
         <div class="row">
           <div class="space"></div>
         </div>
@@ -135,12 +134,12 @@
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
-        current tertiary mission
+        current quaternary mission
       </button>
     </h2>
     <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
       <div class="accordion-body">
-        Find ##### his location and capture him. He has something from us that I want back.
+        Lay low and make sure no one spots you.
       </div>
     </div>
   </div>
@@ -152,7 +151,6 @@
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
 
   <div class="carousel-inner">
@@ -165,21 +163,12 @@
     </div>
 
     <div class="carousel-item">
-      <img src="./assets/favicon.png" class="d-block w-100" alt="...">
+      <img src="./assets/sigil.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Entity Sigil</h5>
         <p>The sigil representing that you are in the same team as The Entity. Team members are forced to wear this in some way.</p>
       </div>
     </div>
-
-    <div class="carousel-item">
-      <img src="./assets/favicon.png" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Ally Sigil</h5>
-        <p>The sigil representing that you are an ally of The Entity.</p>
-      </div>
-    </div>
-  </div>
 
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
